# americasnlp2021

./: README.md  evaluate.py  requirements.txt
baseline_system/: .README.md.swp  .citations.md.swp  .readme.md.swp  README.md  requirements.txt  run_baseline_system.sh  sp_tools.py
baseline_system/translations/: score_report.sh
baseline_system/translations/aym_es/: aym_es.bpe.ref  aym_es.hyp  aym_es.out
baseline_system/translations/bzd_es/: bzd_es.hyp  bzd_es.out  bzd_es.ref
baseline_system/translations/cni_es/: cni_es.bpe.hyp  cni_es.hyp  cni_es.out  cni_es.ref
baseline_system/translations/cni_es/bpe/: cni_es.bpe.ref
baseline_system/translations/gn_es/: gn_es.hyp  gn_es.out  gn_es.ref
baseline_system/translations/gn_es/bpe/: gn_es.bpe.hyp  gn_es.bpe.ref
baseline_system/translations/hch_es/: hch_es.bpe.hyp  hch_es.bpe.ref  hch_es.out
baseline_system/translations/nah_es/: nah_es.hyp  nah_es.out  nah_es.ref
baseline_system/translations/oto_es/: oto_es.bpe.ref  oto_es.hyp  oto_es.out  oto_es.ref
baseline_system/translations/oto_es/bpe/: oto_es.bpe.hyp
baseline_system/translations/quy_es/: quy_es.bpe.ref  quy_es.hyp  quy_es.out
baseline_system/translations/shp_es/: shp_es.bpe.hyp  shp_es.bpe.ref  shp_es.hyp  shp_es.out  shp_es.ref
baseline_system/translations/tar_es/: tar_es.bpe.hyp  tar_es.out  tar_es.ref
data/ashaninka-spanish/: README.md  dev.cni  dev.es  train.cni  train.es
data/aymara-spanish/: README.md  dev.aym  dev.es  train.aym  train.es
data/aymara-spanish/parallel_data/en-aym/: opus_globalvoices.en-aym.aym  opus_globalvoices.en-aym.en
data/aymara-spanish/parallel_data/es-aym/: opus_globalvoices.es-aym.aym
data/bribri-spanish/: bribri-orthography-conversion.ipynb  dev.bzd  dev.es  orthographic-conversion.csv  readme.md  test.es  train.bzd  train.es
data/guarani-spanish/: dev.es  dev.gn  train.es  train.gn
data/hñähñu-spanish/: dev.es  dev.oto  train.es  train.oto
data/nahuatl-spanish/: dev.es  dev.nah  train.es  train.nah
data/quechua-spanish/: README.md  dev.es  dev.quy  dict.es  dict.quy
data/quechua-spanish/parallel_data/es-quy/: dict_misc.quy-es.es  minedu.quy-es.es  minedu.quy-es.quy
data/raramuri-spanish/: dev.es  dev.tar  train.es  train.tnh  train_nontok.es  train_nontok.tar
data/shipibo_konibo-spanish/: README.md  dev.es  dev.shp  train.es  train.shi  train.shp
data/shipibo_konibo-spanish/parallel_data/: dictionary.es  dictionary.shp  educational.es  educational.shp  flashcards.es  flashcards.shp
data/wixarika-spanish/: dev.es  dev.hch  train.es  train.wix
pilot_data/wixarika-spanish/: dev.es  dev.wix  train.es  train.wix
test_data/: test.aym  test.bzd  test.cni  test.es  test.gn  test.hch  test.nah  test.oto  test.quy  test.shp  test.tar
