Che jarýi ha che taitachu niko tapicha oñoirû ikunu'û rasáva.
Ore róga Concord-pe otroko 30000 acres ha hetaiterei orerymba.
Ha chemondýi gueteri.
Upe ñembokapu namombyryetéi ógagui ha akyhyje asê haĝua.
Ndaikuaái mba'érepa oiko umíva
Araka'eve nde'íri oréve moôpa oho hikuái.
Mba'evete chéve upe hembiapo reko.
Ha'e chupe ndoikuaaaiha mba'épa ojapo.
Oporandu romohu'âpa rohóvo upe documental.
mmm, peteîva che memby, 18 jasy oreko.
He'i hesayhague ha upéi he'i Joe ohohague ogaguy peve.
Ojapo hikuái peteî regulador oikóva ára yvatépe.
Che,... Ña Faulk angirûetékuri.
Tekotevê rehasapaite upe mba'e rehe.
Umi sy ho'u pohâ vai /droga
héê, upeichaite, ha'ese reñembosako'ipávo, tembiapoita upéva he'iséva reheve, ikatu reho reputu'u Club Med ha ojehepyme'êmba'itéta ndéve.
Ha ko'áĝa areko che kyvy peteî oikóva Alemania-pe.
Ndoikuaai mba’epa ojejuhútava chupe.
He'íkuri chéve…péicha ... Peteî tapicha cherenoitaha ipahápe rojotopa haĝua.
Oimeháicha, rojepyso, ha ko'áĝa ha'ekuaa ko mab'e káusa rojepysohague Kadina, Oikinawa-pe, upéva 1968-pe.
Ha'ete ko ipytu vaíva ko tenda, ndachegustái.
Nameméi añemonde porâ.
Ha'e he'i chupe oikotevêva guive.
Ha, mm, iñambue, peteîteî umi ñemuhára-pe oîmbaite ikuatiakuéra.
ha'e oikuaase umi cooperativa de ahorro y crédito rehegua.
Oîniko upe viru ñemongu'erâ ha upe Cutty, upéva upe oñemúva réra.
Hetave aviô oîramo upéva apañuâima.
Fannie Flono oñe'ê ñandéve jepe hembiapo heta.
Ojoapypániko, ha ñandejára! naikuaái mboy áranera'e.
Nde'íri chéve mba'evete mba'emba'épa ojereko ñeñangarereko rehegua.
Ha'e oreko mba'éichapa ojejokokuaa.
Upe bomba ndaikatúi okapu mba'evéicharamo.
Che avy’a ha aime porâiterei.
Ha upéi isy he’i chupe, isy ojayvy tenonde gotyo, omaña ha he’i, eguata ha'éicha.
Upe ñembokatupyry reiporukuaa haĝua upe ao de presión ipukumihína.
Ohenói mombyry guive.
Che aime ja'e… néi, …, upéva oî porâ, reikuaa, upéicha.
Upéva niko peteî viru ñongatuhaichagua ñepytyvô rehe.
Ha'e omondoropaite umi tekorâ.
Tapichakuéra ndojepy'apyiva'erâ oiméramo heta ijyty omohenda porâma guive.
Che chepychyeterei rupi añepyrûjey añe'ê hendive
Pe kuñataî chepytyvôkuaáva oiko mombyry.
Mburuvichavete Kennedy he'i umi pilótope: Iporâ ta'ânga pejapóva.
Ha’e he’i isy avei oguataha ipysâ akâ rehe.
Aimo'âkuri cheañoha upe papapy reheve upe ñeñanihápe AFFC Air Force Career.
Ndahechaporâi cheañoha umi reguladores oñetante haĝua.
Ivaieterei upe ha'ânga/idiseño
Ha reikuaa, ipahápe reikuaa, mba’épa oñeporandu tapichakuérape, peteîva ha ambuévape. Ha avave ndoikuaái moôpa oî, ha peichaháguinte, reikuaa, oiko porâjey ndohechamo'âvéipype Joe-pe.
Che py’a pererepa avy'aségui ha'e oîhaguére upépe.
Hasy rehupy haĝua kuatia, vidrio ha láta peteîteî hyrýpe.
Ha'e ou, oipe'a okê ha chemandu'a amaña che rapykuévo ha ahecha hova, ahechakuaa ndaha'éihague upe oha'arôva.
Ha'e he'i ndoikuaavéimaha jeikove rehegua.
Rehepyme'ê ipohýiva 10% hi'arigua, hetáma.
Añe'ê Ramona ndive akokuehe.
Jaikove ha jaikuaa, nde reikuaa, retanteávo, upe aviô.
Añemondýi gueteri.
kóva upe sargento, mburuvicha, mbo'ehára Clem Francis, nomba'apovéimava Estados Unidos Fuerzas Armadas-pe.
Hasy ndepirehûramo upéramo.
Néi, oimeháicha, oike upépe ha oî ku péicha: Mba'eteko jaha hese?
Añeha'â añakarama hese.
Ha oitykuri 5 destacamento U2gua
Ere ndera'yha, Mboy arýpiko oreko hikuái?
Ñembokapu oiko che róga ypýpe, naiporâiete árupi.
Ha'ete tapichakuéra ndoguapýiva voi oñe'ê iñapañuâi rehe.
Tapichakuéra ohechakuaava'erâ ijyty retakue ha ipohyikue.
Je`´eramo upe aeronave hendy, mba'ére okáita ha hykúta orekóramo hesegua de plomo oipyteva'erâkuri upe tata akukue?
Oî porâ, rojavy mimi.
añetehápe, pocâmi oñe'êtava iñapañuâ ko'aĝagua rehe.
Upe vy'a guasúpe ndoje'úi guaripóla.
Che ruvicha iñe'êkangymi ha iñe'êpeteîva.
Aiporu ipumbyry oporohenói haĝua.
Amba'apóta gueteri upe árape.
Ha'e nonaséi 1943 peve.
Ha’e peême che reindy mba’eha.
Oñembovyvy pya'epya'ente ha vaivaiete.
Mayvaméva oikuaa porâ moôpa oho hikuái.
Ha'e he'i ojupi hague yvatévo.
Roñongatu ore láta peteî mba'yrúpe ha umi kagua amuévape, kuatia ambuépe ha henyhêmbávo roroja mba'yruguatápe ha roraha haĝua heta roiko.
Mba'etekópa nde ára?
Heta che memby.
Kennedy oñe'ê umi pilotokuéra ndive.
Umi tabulaciones oreko heta marandu.
Ambyasyete, ndaikuaáikuri rehecha ramo ha jagua.
He’i hi’âva’erâha ohupyty ko árape.
Avave ndoikuaái mba'e ógapepa oho.
Upépe roiko mokôi arapokôinte.
Chéverô guarâ ahayhuve umi jakua oka Cocker Spaniel-ichagua arekómiva.
Ha'e chupe ohasahague upe oñeha'arôva ichugui 40%
Ikypy'y ikatu ohasa ipire morotîvaramo.
Upe tata aku ikatu ojejoko avei okái jave.
mmm, nahániri, añetehápe, namoñe'êi ni peteî umi aranduka amoñe'êva'erâ.
Ha'e ndaipohýi.
Upe tornillo ojoko presión.
Ha'ese ndaipóri peligro ojeike haĝua upe bomba rehe ndokapumo'âi rupi, jepe hatâ opoko yvy.
Añemondyi'imi.
Locust Hill, héê, ikatupyryeterei.
Oporandu mba'éichapa oî umi mba'e.
Oî ojeityva'ekue Cuba-pe.
Avei ahche umi mba'e ha'ekuéra ikatúva ohepyme'ê.
Ojapyharava'erâ upe ´camara yvategua, ojepaseava'erâ oñepyrû mboyve oveve U2 térâ oveve upe ao pyrusu de presión reheve.
Ha'ete peteî mba'e ivaipajepéva.
Iporâta emboguejymivéramo michîmi upe tornillo, peteî tesapirîme ikatu rembokua nde rapicha vevýi
Upéva upe mba'e tuichavéva ndoroipotáiva oñehundi. Ndaipóri káso la oñemondóvo upe bomba de hidrógeno 30 guive, peteî C124.
Ha'e hemimo'â peteî ha ipy'aguapy.
Ndojehejái oréve rojavývo.
Opaichagua jagua oîséva okápe ahayhu, imarangatujoaite umíva.
Ndaha'éi ko'áĝa ramo rerekóva mymba óga.
Maymavéva rojapo, avave nde'íri oréve moôpa ohóta, ni araka'épa osê okaha gotyo opyta haĝuáicha sapy'apuku uperupi.
Mitânguéra ho'u michîmi champang.
Yvypóra naiporâi jagueroikovévo.
Reikotevê contrapesión amo yvate mombyry.
Reikóramo ko tetâme reiko ndepy'a nde jurúpe, akói rekyhyje âichagua mba'égui.
Romeva'erâ upépe 20 aravo jave.
HA'ekuéra ndorekói ñongatuha.
Fuerza Aérea naiñaponde'ái.
Iporâ ore ñomongeta.
Aĝuahê ko pyhareve ha ha'e ou avei.
He'ichéve mba'etépa oikotevê ha oikotevêha ko árape ĝuarâ.
Naiméi nendive, iñe'êjojaitereiniko.
Akaru mbeguekatu asy ani haĝua cherasy.
Jepe roñeha’â heta, ndaikatúi rojei Joe-gui, ndaorerejái pytu'uhápe.
Ipy'aguapyrasa ha nanemoapañuâi.
Néi, eheja chéve tajeasegura nde reimo'êha oî porâha ñaha'arô po ára mbokarâ.
Washington ho'a mokôijey.
Héê, tapicha ikatuva'erâ ndaha'éi he'i porâmbátava oikova'erâ.
Mba'evete chéve mba'éichapa remohu'â.
Sapy'aitemi chera'arô.
He'i ohohague yvatévo.
Chereñói Fesno-pe.
Upe kuimba'e márô ndoúiva árupi.
Aiméma aha haĝuáicha ko'aĝaite.
Ohómakuri ha he’i chéve ani haĝua ajepy’apy.
Aporandu mba'eichaitépa haĝe.
mmm, mba'eve? Ere nanemandu'aiha mba'eve remoñe'êva mbo'ehaópe, jepe ndekakuaáma, ndaipóri aranduka ndepy'ara'âva'ekue?
Ou py’ae, ha aikuaa moôguipa ou.
Upépepiko rehenói chupe?
Ahayhu mbo'esyry irundyha.
Upe Base Aérea Laughlin oñemboty sapy'ákuri.
Areko peteî che kypy'y oñe'êva alemán ñe'ê.
Ha'e ikangyrasa.
Che tio hovatavy.
Aimo'â ipochytaha che ñe'ê ryapu rehe.
Ha'ete ku iporâitereítava.
Ha'e he'i noñe'êmo'âvéimaha.
Äpe areko kapi'i Bermuda, heta y oikotevê, mbyky asy rerekova'erâ ikatu haĝuáicha nde korapy ojogua golf okarusúpe.
Chéverô ĝuarâ ere porâ upe iñe'êjoja rehegua.
Ndarekói mba'eve ambojoja haĝua.
He’i chéeve aikuaava’erâha mbo'ehao iporâtaha.
Namemeigua, katu ojejapóva ñepytyvô ome'êva marandu ñemurâ rupive.
Oje'e chéve amoambue haĝua peteî fusible mba'apohápe, che ndaikuaái mba'evete vera cable-kuéra rehegua.
Namoñe'êi ni peteî aranduka ohasáva 100 kuatia roguégui.
Hepyeterei ñañemonde haĝua.
Upéicha rupi roiko ko'árupi.
Reikuaa, che membykuéra niko horyeterei hikuái, ipy'aporâ, chéverô ĝuarâ ndaupéichai, oikuaa umi mitâ tuichavévagui, katu….
Tapichakuéra ni noimo'âi ndaipiremorotîriha.
Ndaikuaái mboy árapa oikovéne upe tembiasakue.
Detonador ombokapu mboka ojetiráramo chugui.
Upéva niko ndoipotaiva’ekue hikuái.
Mba'eichagua mbarakajápiko rejuhu?
Chéniko aime, … ehejántema, aháta akaru. Che vare'a.
Upéicharamo jepe, umi mymba okañymbáta upégui, umi kavara ko'ýte.
Fresno niko kóva, ha'e ndéve.
Añeñandu vai ko'aĝaite peve.
Che kypy'y he'i ha'e oporomboykeha te'ýi rehe.
Ndorombokatupyrýi avave ndive.
Hi'íniko hiluái pokôi árape ohechapataha nde kuatia jahechápa ndaha'éipa preso-kue térâ noiméipa…
Kennedy he'i ore atýpe oheka haĝua umi mboka guasu.
Oîhaguéicha aviô oikopaite peteîntejepe ndojejapíri.
Héê, Taiporâite nde arahaku.
Umi tenda ahaseveha apytépe oî ko y rembe'y, iporâiterei, ha nde moôpa rehoseve?
Ha ndaikatúi opyta upe Augusta jeré rehe upepegua oikuaa oñeha'âhague ojapo mba'e ojeguerokyhyjéva oñeha'â haĝuâ oiko ipire morotîva ramo.
Ña Faulk omboguata peteî HONDA sa’yju ára ha ára oho haĝua omba’apo.
Mba'éichapa rejapóta aeróbico?
Ndajepy'apýi ahathaguére mbo'ehaópe.
U2 ojagarra hetaiterei ta'ângamýi yguýpe.
Ha che añeñandu mba'éichambo, añehundimaha.
Oiméramo ojavy, ohechakuaava'erâ.
Mba'evete chéve ndete rejaporamo térâpa repaga rejapouka haĝua.
Umi aty militar ndaikatúi oîvo Texas rérape.
Ndaikuaái mboy árapa oikovéne.
DOT ojagarraramoguare ijyvyrâ, rova peteî tenda michîvévape Concord-pe, upépe ndojehejái ojereko mymba oñemboja'o rupi mba'e mba'érâmbo, ha upé guive opa mymba jereko.
Oñongatupaite marandu.
Isái mbyky ha oveve'imi.
Ojejavýramo, ndekáusa.
Tapichakuéra ndoikuaái ha'ekuéra ouha Afrikaygua ruguýgui.
Nachemandu’ái upe óga rehe.
Regulador ndoikói mba'everâ.
Ndahasyiete ndepirû haĝua.
Oî peteî oñemúva hérava Cutty.
He'i chéve aha haĝua Africa-pe.
Akaru pya'eterei ikatuhaguéicha ha upéi oike ha'e ha che chepytyvô upévape.
Aimo'â ohejáta oho ambuéva cherendaguépe.
Che jarýi ha che taitachu niko sapy'ánte ijargel-rasa ha ndahaseguasúi hogapekuéra.
Roñeha'âmba'eite oiko haĝua orehegui médiko ñana, katu ko'aĝaitéramo ndaha'éi gueteri.
Ao repy rehe ndaipóri ipohýiva.
Chesegura ko'ápe, upévare chegusta.
Okái aja ndaipóri oipyteva'erâ upe tata rendy.
Che tio ho'a porâiterei chéve.
Ha'e 10 aravo'ípe amohu'âtamaha.
Aikuaa akói hembiapoitereiha hikuái ha avei ikatupyryha, avei tapichakuéra iñapañuâi hetaha ha ndaha'éi ku oguapýntema péicha oñe'êmbarei ha osê porâmbáma.
Peteî árape Joe oho ha avave ndoikuaái moôpa.
Upe oñemúva hérava Cutty ogana 10.000 $ peteî jasýpe.
Amomarandu'aínakuri peteî hendápe Del Rio ryepýpe upéi aha Laughlin Air Force Base-pe, ojeabri ramóvape.
Ndaikuaaái ha'épa oipota umimarandu ñesê rehegua aravo.
ha'e itujave chugui.
Ore róga oîva'ekue ko'árupi
Oî hikuái Washington, Buffalo Nueva Orleans ha Chicago mbytérupi, Wastington ndaitapykueiete nipeteîjey, Chicago mokôi jey ho'a ha peteîva Buffalo rovái.
Oikuaa mba'épepa oike.
Sapy'apy'ánte remboykueva'erâ upe kapi'ipe Bermuda.
Peteî kuimba'e ojuka hembirekópe oñeno rupi ambue kuimba'e ndive ramoite ojepoi rire chupe upe haguetére.
Rova ambue árape.
Che kypy'y he'i gueteri, he'i: sapy'ánte ñande jarýicha, reporoja'oparei hendape'ÿ.
Ndaikuaái mba'érepa ha'e ombohasa umi mbo'ehao.
Ramoite ojerehague hikuái.
Upéva rehe oñeha’âkuri hikuái.
Ou eíraicha ha aikuaa porâ araka’épa oúta.
Upéicharamo oîramo ojejavyha, nde upe ojavýva, ha'e che.
Ramona chejuzga kirirîhápe.
Ikypy'y pire iporâitevéva upe hóga jerépe.
Kuatia jehecha niko ikatu oraha peteî jasy.
Chepy'ara'â ko tenda.
He’i oĝuahêha aravo jakyhyje haĝua.
Oî ñande apytepegua ñamyakâva umi reguladores oñetantea haĝua.
Ha'e chupekuéra haimetéma amohu'âha.
mmmm, ha ha'e he'i,... he'i,... he'i, nde nderehechái che ahechaháicha mba'épa upe jeikove
Ha upéi upe mba'e mokôiha amañátava mboýpa ikatu ohepyme'ê.
Ikatuete okapu upe bomba.
Che rovaja oî ejército-pe.
Napenái Ramona rehe.
Héê, héê, che amba'apohápe ome'ê ndéve mokôi arapokôindy ñepyrûrâ, ha upéi ary ohasakuévo ome'êjapi ndéve peteî arave rereko peve irundy arapokôindy.
Umi hopea ohechauka mboýva oñondivepa ko'áĝa umi kuénta.
Ehejami chéve ta'e ndéve ko árape chekuerái haimete ahejarei.
Ikypy'y Sher heko ensuguy.
Mboka atómica naisâi
Héê, chemandu'a che jarýi ha che ramói osêmi tapére ombyaty latíta.
Ha’e peême pe jagua che reindy mba’eha.
Upéicha amaña yvatévo, ahecha moôpa oî Ramona ha upépe ahenói chupe.
Che sapatu oñeñuâ pype.
Ha'e oguataramo'â tekorâ he'iháicha.
ko’ápe añetehápe ivaipaite opa mba’e, namombyryiete ore rógagui oñembokapu tapetépe.
Avave noporopytyvôi.
Chéve peteîchante rejapoháicha.
Roikeva'erâ.
Natekotevéi, che membykuéra ohasáma rupi 20 ary.
Néi, ni napensaikurihína upéva rehe, ajepichaiterei ha añepyrûjey añe'ê hendive.
Fuerza Aérea ojogua 18 aviô.
Augusta, táva ndatuichaitéiva.
Akói che ao porâ.
Néi, Natekotevêi ja'e ndaikatuiha rojavy.
Upe mitâ oî.
Retanteávo aviô nembo'e mba'éichapa remaneháta upe presión..
Ijaveguáva oî 8, upe macho añoite hâi vaíva.
Ha'e ome'ê chéve mokôi hendáicha.
Ere porâ naiñe'êjojaiha.
Ooo, chemi upe 922 omoîva inyección upe regulador-pe
HI'âva'erâ chemembyve.
Ahecháma Derkman irundy jey.
Romondo ore tropa Japón-pe jasypoteîme 1968-pe
Upe aty militarpe ojekuaa Tx rerapegua ramo.
Nahániri, ha'e onase 1900 ramo, oreko 16 ary ha oiméne 1926-pe19, nde reikuaa 1930 mboyve.
Ore róga Concord-pe ndaikatúi orerymbávo.
Che ndaikói upe campus-pe.
Ha'e he'i chéve aheka haĝua marandu iviru ñemongu'e rehegua.
Sapy'ánte ombota hatâ upe imesa ha upemi rire oî porâ jeýma, ejagarra che meságui, da, da, da, da, da,
Pe arapokôime oĝuahê hetave aviô peteîgui.
Aiko upe campus-pe.
Ndachevare'áietevoi.
Jurado-pe akói oîva 13 tapicha.
Aipytyvô jepi che jarýi umíva ndive rombyaty haĝua latíta tapégui.
Ramoite mburuvicha nomba'apoveihague.
Ha'ese arekoha che aravopapaha ha oîha che sapatúre ha yvyra rakâmimíre, opamba'e morotîma amo yguýpe.
Upe jaguane orera'arô rojujey ore róga sapy'aguápe.
Chupe ndoúi ni ndohói umi cooperativa de ahorro y crédito
Añe'êkuri U2gua ndive
Ha'e ome'ê chéve peteî hendaichaguánte ha opyta chéve líno sa'imi.
Cambridge-gua.
Ahejáta oho ha márô namañamo'âi cherapykuévo.
Peteîva umi mokôi ho'ava'ekue Chicago niko Buffalo.
Ikatu reñemosê ko tetâgui.
Katuete oikuaaukua oréve moôpa oî hikuái ha moô gotyopa oho avei.
Oî peteî apañuâi, pokâ ojehecháva cableado rehegua.
Sapy'aitemi, tambyatypami che akâme chepy'apy.
Ejesareko mboka rehe he’ise reipuruva’erâha mokôivéva ipo.
Che ru he'i chéve ndaikatúiha ha'u mba'evete.
Nda'oretélei.
Oñeimo'â ikypy'y ipire morotîha jepivéramo.
Che kypy'y he'i nameméi cheroryha.
Ohupyty hikuái oha'arôva'ekue.
Iporâ ha amangy.
Okaru heta katu ndojupíri.
Ovy'aitereígui ohechávo Joe-pe oñepyrû hasê.
Upe Base Aérea Laughlin-pe oiko 10,000 ñorairôhára.
Che sy omano'ôva’ekue avati ha mandyju.
Che ndahechái ambue mba'e ndaha'éiva tapicha oguapýva oñe'ê iñapañuâi rehe.
Oiko hikuái Augusta korasôitépe.
Ikatúpiko rehendu ha'éva che?
Ore ao mba'evépe ndojoguái umi astronauta oipurúvape.
Upe aja upe Fuerza Aérea ojogua SR71, ko'áĝa upe A-12, romba'apovaroína CIA ndive.
Ndoikuaái gueteri mba'éichapa ojejapo oxígeno regulador.
Umi kavara okañy upe korágui.
Ha péicha ousapy'a mamo guivombo, ndajaikuaaái moôguipa, katu, …
Mmm, ni aluminio forjado, aluminio prensado-nte.
Omopotîsékuri upe tuguy ao sorokuépe.
Ykypy'y ména avei ipire sa'i.
Umi viru oñeñongatúva peteîchaite.
Peteî aviô opyta guive ohasáva Cuba rupi, ha oity upe Rudollph Anderson.
Chemandu’a amono'ôramoguare margarita óga kupépe.
Itúva pastor.
Guyryry mante renohê chugui.
He'i chéve arekoha 14:00 aravo peve ajapopa haĝua upe apopyrâ.
Hesakâ porâiterei ikypy'y ndojapokuaaiha mba'eve.
Ijatuetépa, leikuéra ituja ha ndoikovéima.
Ndoguerohoryeiete hikuái ipirehû umi árape, upéva oiméne, nde reikuaa, oiméne, amo 1930 oñepyrû rupi oikoramoguare umíva.
Emoî Coca Cola ñekuave'ê upépe.
Ani repoi marandu ñekuave'êrâ.
Araha upe bosa oikohápe.
Upéi oiko hikuái Mallard Creek-pe.
Ha'e ndacha'eiha hese ha ajeguaru chugui.
Ejesarereko porâséramo mbokakuéra rehe reiporuva’erâ mokôivéva nde po
Augusta oreko 10.000 tapicha.
Ha'e omopeteîmba chupekuéra.
Namoñe'êi heta aranduka.
Aime umi tembiapo iporavopyrépe mokôi ára ñavo.
Ndaikuaáietevoi mba'épa ajapova'erâ umi total reheve. Ikatúpa embohesa'ive chéve amyatyrô haĝua ko apañuâi
Upe pintura akói hû.
Ovy'aitereihágui ndovy'avéi sapy'a.
Nde jaguaraýpiko iporâ?
Ajapova’erâ, mokôivéva areko rupì pa ha pateî ary.
He'i isyhasyha ha ndaikatuiha oguata.
Ndacha'éi upéva rehe. He'ími ikypy'ýpe opaite ára, rejapo va'ihareína.
Oje'e hese tuja ha ĝuaiĝui ñeñangarekoha, katu héra otyarômava renda.
Ojejapo itavera hepy'ÿvagui.
Aikuaa orekoha 4 py (10cm) ipukukue.
Ojepori peteî kuimba'égui ojejavy oñembotykuévo, ha oho ojuka hembirekokuépe.
Ndaikuaái mba'éichapa ojeporuva'erâ upe mba'e.
Ndahecharamoiete ikangyhaguére hikuái.
Iporâitereíkuri upérô.
Che tio, karia'y vale.
Ndaikuaái heta mba'e hesegua.
Ndohejamo'âi avavépe ohovévo.
Chemandu'a upe oikova'ekue okupépe.
Ndaikuaái moôguipa ou, katu ipy’ae.
Ahenói Ramona-pe aikuaa haĝua moôpa oî.
He'i chéve chembegueve haĝua.
Upe mitâ renda oipe'â hokê opa ára mitâ imitâvéva po arýguipe ĝuarâ.
Héê, upevaite ajapo ko árape, araha Darkman, rehechápa, nahániri, ndahechái. Ahecháne ko pyhare.
Aaa. Ambue ojehúva upépe ikatúva iporâ umi che reindy mandu'a ñepyrû ha upe korapy okupe.
Amboja che reindýre.
Aheja upe bosa ha aimo'â upéva ndaha'eiha che apañuâi.
Ha añetehápe, ivevúi!
Areko 20 che pehênguekuéra oikova'ekue Evans-pe.
Rick he'i ndéve osêmahague.
Chupe oñepytyvô hembi'u ha ijaorâ
Iñarandu hikuái, katu oñembotavyete oî jave ambue oikuaa'ÿ ichupekuéra ypýpe.
Departamento de transporte ojuhu ambue yvy ohepyme'ê haĝua hendaguépe
Cheverô ĝuarâ nde reikuaa ha'e oî porâitereihague
Ndoroipysói avavépe.
Heta tembiasa oî oñemombe'úva.
Ndaikuaaporâi mba'épa ndéve kóva.
Ovakuri Mallard Creek, Charlotte-pe.
Ndahechái gueteri Darkman, upévare ha'e ahataha ahecha ko pyhare.
Heta tembiasa oî militar-kuéra rehegua.
Upe tornillo noîvaríri, ejopyporâkatu.
U2 ojagarra heta ta'ângamýi.
Nontendéi mba'épa oiko.
DOT ojogua upe yvy ha hembiporu
Héê, umi tapicha ikatupyrýva he'i haĝua ha márônte noñemyangekóiva.
Héê, ha’e ipy’a porâiterei.
Itúva pastor luterano.
Ñembovyvýniko, tembiapo katupyry.
Rehayhu Harry Potter aranduka?
Ndéve ĝuarâpa iporâve upe téle omondávape jaheja tohorei?
Ajapomanteva'erâ, ohypytýma rupi ary.
He’i ani haĝua ajepy’apy.
Ore médiko ñana ha orembopochy nda'upéichai orerecha'ÿramo.
Chejuruvy asy hetaite mba'e che membykuéra oikuaáva rehe.
Amoñe'ê aranduka ko'êko'êre.
Héê, mba'eichagua jaguara'ýpa rereko?
Amokokô upe tembi'u.
Che aime tembiapo jeporavopyrépe.
Ramona oî yvýpe ikuruchîhína.
Ha'ese upéva upe hesakuápe oîva.
He’i hi’âva’erâha oguereko upe apopyrâ ko ka'aru papokôi aravo mboyve.
Roreko umi ao pyrusu guasu de presión aviôme, umi astronauta oiporúvaichagua, ojoavyha oremba'e overapaite ore pyregua peve ombojevy haĝua pytu aku.
Ha’e ningo 27 ary itujave chehegui.
Añetehápe nachemandu'ái mba'evete chemitâramoguare.
Aikuaa porâ mba'erâpa aiporuva'erâ!
Ha'e 27 ary itujave chugui.
Upe pintura sa'y iñambue ohupyty jave 100º ha ikatu ohasa pytâgui hovýpe, upéva hechapyrâ.
Opoi marandu ñekuave'ê rehegua huguái rehe upe hyepýpe.
Ndaipóri tornillo, votônte.
Che aimo'âukuri upéva peteî privilegioha. Aimo'â gueteri, ha'e gueteri. Che añoite upe 922 ExO aiméva upe oñeñanihápe AFFC Fuerza Armada Mba'épe.
Ahayhu 4º-pe mokôi jey rosê ropytu'u.
Ha'e chupe araka'eve ndajapopamo'âiha.
ära repytu'u haĝua hetahetave remba'apóramo tavaha rupi.
Ha'e ojopy ikypy'y ndive.
Néi, ñaĝuahêniko ko'âvape, peteî arapokôindýpe oîha mokôi térâ mbohapy aviô ha ndoikuaái moôpa ovevéta.
Vaicha chéve ndaha'éi nde jagua tenondegua kóva.
Aĝuahê che upe gimnasio-pe ko árape, ha'e ou kurive ha chemomaitei.
Héê, ha’e he’i ojejogua haĝua peteî mopotîha reiporukuaátava.
Héê, nde reikuaa ha’e hetia’etereihague.
Ikypy'y nomendái.
Upe techaukaha presión ndejuka opaite aravo.
Upe ikyre'ỹ iñambuete sapy'aitépe
Ndaikatúi chemandu'a mba'épa oiko, katu chemoñeko'ôi sapy'a apensávo aha ñepyrû va'erâha mbo'ehaópe ha oiména upéva upe ára cheruguypochyve hague.
Ndaikuaaái mba'eve aviô rehegua.
Rova ambue távape 1992-pe.
Reikuaápa hi'âva'erâ chéve ajupi avión-pe, aĝuahê upépe ha tahasa porâ.
Upéicharamopiko ikypy'y ména ipiresa'i avei?
Upéva ha'ete ku vy'aguasurâ.
Ha'ete ku omboykéva ha'ehaguére upe ha'éva, nde reikuaa, ojekuaa upe mba'éichapa oreko ambue hemiarirôme rupi.
Ani rejepy'apy, oiméramo ojejavyha roipytyvôta emombo haĝua ijapére.
Ndoikuaáikuri hasyetétaha.
Nañorairôi U2 ndive mba'évéicharamo
Oñe'ê pumbyry isâ'ÿva rupive.
Ahecha iporâha.
mmm, néi, guyryry mante ogueru rupi…
Ovy'aitereígui opo ha haimete oñeakânupâ okê renda rehe.
Upéi ajuhu hese ha apyta avy'aiterei, mba'épa ajapóta chugui.
Ojagarranteva'erâ umi total, otantea oî porâpa ha ojapóma.
Añetehápe ahayhu rasa ko y rembe'y, ipotî ha oñeñangareko porâ.
Peteî viru ñongatuha peteîteîguaichaguaite avei.
Héê, ha'ete ndaiktumo'âiva'ekue, ajépa?
He'íniko ohechataha hikuái kuatiakuéra ko'â pokôi ára pukukue.
Heta ñemuha oî.
Araka'eve nañembokatupyrýi amba'apo haĝua upe ñemuhápe.
Opaite tekoveniko ikatu jagueroikove ha iporâ ijurujamijo'a chupe.
MMM.Ndoje'éi araka'eve.
Kóva Fannie. Okakuaa Ag--Agustape, GA, oñe'êta imitâramoguare rehe.
Ha'e oñe'ê mbohapy submarino rehe.
Ndaikatúi ake angepyhare.
Onace jasyteî ára peteîha 1900 ramo.
Ha’e imitâiteve chehegui.
Nde, mitâ, péina ápe apañuái cableado rehegua namemái oikóva.
Py'ÿi okañy umi kavara.
Nañe'êmo'âi ko táva rembiasakuére oî rupi hetaiterei mba'e ñamombe'ukuaáva.
Ha'e omokâ pya'e hesay omosê rire Joe-pe ogaguýgui.
Ndaikuaáikuri haimete omanohague mba'asypo'ígui.
Cha ápe apensa outaha aponde'a reheve, nde reikuaa, onohê haĝua chendive, reikuaáma, cheja'o oimeramoguáicha ikatu amoambue.
Ndaveveichéne.
Oñe'ê mbeguekatu asy ikatu haguéicha.
Upéva upe ojaposéva, upévare aha'arô taupéicha.
Oñeha'arôkuri nonaséi.
Néi, aĝuahê che upépe ko pyhareve, ha,… cheresarái mba'éichapa, amalisia amba'eporandu, ha'e oike, térâ mba'épa che aikuaáta.
Ndacheñemuhái.
Amba'apo destacamento ndive U2-pe ĝuarâ 40 ro'y pukukue ko'êko'êre.
Upe aviô kakuaaite ojeity Cuba-pe, mayo-pe.
Umi liméta hepyve rehasávo upe tetâ mboypýri.
Ha'e nontendéi ojepykua ha ojepokuaaha upe karia'y ndive ara paha peve jepe ndoikuaái chupe upe mboyve.
Oñeha'â ani haĝua roñeñandu vai katu roikuaa orekáusa iñapañuâiha.
hovaja sueco.
Ndaikuaái mba'erâpa aiporuva'erâ upe mba'e.
Iporâva reikóvo ko tetâmeniko nderejepy'apyiva'erâ umíva umi mba'ére.
kuatiara'êvete henyhê, upéi láta ha upe rire vidrio.
Chéve ĝuarâ iporâ upe oficial reko,
Araka'eve ndovái hikuái Charlotte-pe.
Reikuaa, ndaikatúi, ndaikatúi reikovévo ndererekóiramo contrapresión, ohupíva nde pytuhê presión amo yvate.
Chéverô ĝuarâ ikatuva'erâkuri oime ajapóva aipysyrô haĝua chupe.
Mba'éichapa , María?
Mba'evete chéve mba'éichapa rejapo.
Ikatúkuri oamoingepa kurive.
Ndacheñemuhái.
Reime porâta.
Oîpiko aranduka rehayhúva térâ nderecha'éiva?
Hetave umi ojavýva ojapikuévo mbokápe niko oiporúgui peteî ipónte.
Ndaikatúi oñemoî peteî ñe'ême he'i haĝua mávapa omba'apóta okaháre ha mávapa ogapýpe.
Roñembokatupyry 5 arapokôindy pukukue umi británico-kuéra ndive
Eeee. Aiko St. Louis okára gotyo, Jefferson City ha St. Luois, MO mbyte rupi.
Ndaháiva marô Texas-pe.
Oiméramo kytomi, tekotevê remyatyrô upe regulador.
Onase 1900 mboyve.
Peteî tapicha añoite omano upe Cuba apañuâime.
Chevare'a ha upéicha rupi aha akaru.
Aguejysetereíma aviôgui ha tahasa porâite aĝuahê rire.
Oikova'ekue Atlanta-pe.
Upéva añoite oñehundíva upe Cuba Apañuâime, Kaiser, ogueraha umi ta'ânga ha oveve Andrews Air Force-pe Washingtong-pe.
Héê, upeichaite, Locust Hill.
Onase 1800 y piko rupi, ikatu oime 1888, térâ 1889.
Aikuaase mba'eichaitépa rejapóta ko mba'e.
Arohorými che jarýi mombe'upy.
Amba'apo Las Vegas ha Washington-pe.
Peteî kuimba'e oipytyvô fisiológico tropa-pe.
Néi, ikatúpa cherendu?
Añetehápe, ha'ete ku ndoikomo'âiva mba'eve.
Ha, peteîva che rembiaponiko ambokatupyry umi tapicha omoî haĝua paracaída upe moka nuclear rehe, ombokapúva mboka atómica.
o, o, Ñandejára, upéva niko ha'ete jahasaporâtava.
Jepiveguáicha.
Reimo'âpa ojejukáramo ikatuha jehavira vevúi oñemonda jave?
Ndaikuaáikuri nacheañoiha upe árape.
Katu,… oiko hikuái peteî tava'i oîva Augusta oka gotyo hérava Evans, oîva gueteri. Areko gueteri che pehênguekuéra oikóva upápe.
Jepivéramo, ndaikatúi ohupyty heta mba'e.
Aporandu upe ñemuhárapa ipochýta oha'arôramo 14:00 aravo peve, asêva'erâgui pyhare.
Upe rire ndorovavéima araka’eve.
Ahai mba'ekuéra rehe.
Ha mba'eteko ojoguaitereíramo ajaposévape.
Che taichachu iñaña ha oporombykéva máva ndahaèiva heseguápe.
Papa ome'ê chéve chokoláte kambýre eladéragui.
Ama ndachejokói
Chemondo hikuái Del Rio, TX-pe amba'apo haĝua.
Upevarehete, umi temimoîmby pyahu reheve, ko'áĝa hasyve.
Kuatia jehecha niko imbegue.
Ahenói Ramona-pe che rógape.
Okakuaávo ohóvo, ndohechakuaái ojavyha, katu omoambue heko.
Moôpa oho, mávapa oikuaáta.
Ova Upe Augusta oká gotyo upe riremíntema.
Peteîva che memby, mitâkuña, 18 jasy oreko.
Nahániri, oî gueteri okápe ojere oikóvo hikuái. Upéicha oî oka gotyo, ojere hikuái 70 paha guive.
Mba'épa he'i ndekypy'y nde sái rehe?
Roike jepe umi okê oñemboty.
Oiméne ndaha'éi tapicha iñarandupavéva ko yvórape, katu horyrasa, ha ojepy'apy umi oñemoaranduséva rehe.
Ahendu Darkman iporâha.
Ikatúne araha che memby upépe.
Ore róga namombyryva'ekue ko'águi.
Ha'ese che ha'ekuéra orekoha amo 5 ñemoñare rupinte. Peteîva omanova'ekue.
Upéicha rupi nahesakâi chéve mba'érepa.
reikuaa, ha'e omyenyhê umi yvoty rope amoite ha che ndaikuaái mba'épa oiko.
Ohepyme'ê peteî óga rehe chéve ha che pehênguekuérape ĝuarâ.
Upépe ha'e, …, ha'e tetâ remimoîmby motenondeha ra'y, upéicha rupi ha'e oreko, ha'ekuéra oreko heta mba'e ha ambue mba'eve ha ojokupyty porâ umi tavaygua ndive, ha ojehayhurasa.
Mboýpa ndera'y?
Reikotevê contrapesión hetave 5000 pýgui.
Py'ÿi iñambue hemimo'â.
Roikuaa moôpa oho hikuái.
Ojerese voi hikuái.
Regulador omomabueva'erâ presión oîva nde ao pyrusúpe.
Mba'evete oréve, noroñongatúi mba'evete.
Ndoroikuaái moôpa oho umi tapicha.
Ha'ekuéra oñemboja'o umi mávapa omba'apótava okaháre ha mávapa umi mitâ opytáva ogapýpe, ha'ete ku…
Ha che taitachu ndaha'eiva'ekue karai guasu.
Che sy, mitakuña itajuva’ekue upévare nomba’apóiva.
Chéverô ĝuarâ upe he'iséva ñandéve ipeligrosaha.
Ndaijavéima chéve amoingepávo.
He'i chéve aheka haĝua peteî mba'e.
He'i chéve pya'eva'erâha.
Ikatu eremi chéve mba'éichapa opa upe mombe'upy.
Hasy ndéve ndepirehûramo Yvy gotyo.
Añepyrû upepete voi, añembokatupyrývo umi mokôi mitâkaria'y oîva upépe ndive.
Ha'ekuéra oñembokatupyrýma oiporu haĝua umi ao pyrusu tatápe ĝuarâ ha chéve hasýkuri añepyrû haĝua aiporu upe ao pyryguasu tatápe ĝuarâ.
upéva, upéva upe ohupytyséva.
Ndacheporavói hikuái aha haĝua mbo'ehaópe.
Che irû, ha’ete ku heko mokôiva.
Ipire hû vera.
Chupe oñepytyvô heta
Oje'e chéve, aha haĝua Del Río, TX-pe, upéva rehe aĝuahêvo upépe, aikuaa ahava'erâha Laugghlin Air Force opytahápe.
Oî hikuái oka gotyo jerépe 70 paha guive.
Ko árape oñe'êta ñandéve upe Tercera SS, U2 Quick ha Blackbird rehe.
1962 paha gotyo, oje'e chéve yvaté guivo ahava'erâha Washington-pe.
Upe heko iñambuete.
Reikuaápa, hi'arieteve, rembovyvy ha rejapo âichagua mba'e omohu'â porâva tembiapo katupyry.
Che ndaikuaái mba’eve mborayhúgui.
Upéicha, upéicha, … Ani rejapo ikatúva guive. Ha,
Pévaniko peteî hélice michîva ofraguáva peteî inyección, katu upe ojopyha rape, upe túvo de presión oiporúva pilóto ha ojapóva contrapresión.
Ikatu pejuhu umi ao pyrusu oimehaichagua sa'y peipotávape.
Amba'apo texista ramo mokôive távape.
Ha'e tapicha hû ipire hesakâva.
Upe ñembokapu namombyryetéi aikohágui.
Ha upéichako, akârasy memete, ja'ekuaa ko árape arekopaite mba'érepa cheakârasy haĝua, nde nereikuaái mba'éichapa ojejapo peteî mba'e ha he'i ndéve hikuái: péina, ejapo.
Ha’e che mba’eha.
Ojuhu hikuái 20 mboka guasu upe yga guasúpe.
Areko che membykuña'i michîva ko'áĝa hasýtava araha haĝua katu aháta, eee…
Ndojehejái oréve romoñe'ê vai mba'evete.
Chepy'apy ahava'erâha mbo'ehaópe.
Ndaháiva Washingtong DC-pe
Aikuaa ha'e ndoumo'âihavoi.
Rova peteî ógape rojapova'ekue upe tetâme.
Ore roikeva'erâ upépe.
Che py’a perereterei avy’a haĝua ha'e ouhaguére hi'ára mboyve.
Ha'e nde'íri ojavyha.
Ha'e chupe
Ha péicha ko’áĝa, ápe oî, oipota ko árape.
Ndaikuaaporâi mboýpa hypyva'erâ.
Upéva, che upe 922 peteîmi kuimba'e ha'etéva ha ambue oykeko haĝuánte oî.
Opáichavo, papa oho ombosako'i kagua kakua renyhê chokoláte kambýre chéve ĝuarâ.
Mokôi che tio chembokatupyry.
Namemeguái.
Isegurovéta aĝuahêramo upépe vevépe.
Oikova'ekue Evans-pe, michîmíva.
Nachemandu'apái, angepyhare ha'u heta vino.
Opaite CEO umi viru rehe omba'apóva rendápe ha tapicha ohayhúva ko'â mba'e, upéicha ha'e oikuaaseve mba'épa oiko umi viru rehe omba'apóra renda rupi.
Ndaikuaaporâi kuñakarai Faulk-pe, ha’e oreko 80 ary, kuña ndepy’aporâva, ahecháva chupe sapy’apy’a, katu ipochyeterei upévare.
che ru ome'ê chéve kamby kaguápe.
Ko'áĝa ha'e omboguatakuaáma imba'yru, ijeheguíntema oĝuahêkuaa.
Ooo. Heta ára ahasa ko'â mba'épe, tembiapo iporavopyrépe.
Nachemondýi.
Añe'ê ha'eluéra oñe'êva rehe avei.
Ipirevaihínakuri.
Mburuvicha nomba'apovéima Estados Unidos Fuerzas Armadas-pe.
Ndaha'éi ku roikuaaiteréiva ñana rehegua, katu…
Nahániri, Locust Hill nahániri.
Che rovaja oî omba'apóva apytépe.
Ambojere upe rueda areterei.
Retanteávo aviô heta mba'e reikuaa.
Aiko Texas-pe.
Ha'e noñe'êiete oréve.
Nde téle reheve ha nde, chéverô ĝuarâ jehavira porâ remondahaguére upe téle ikatu rejejuka.
ni peteî níkel namboguejymo'âi, térâ osêva peteîcha, 30 centavo peve amboguejy poteî liméta rehe. Opavave ohasa ko tetâ rembe'y ojugua haĝua jey'urâ ndahepýiva.
Ahendu Will Point-gui.
Ha'e isâsoiterei.
Ne ménape iporâ nde ao?
Plano, Texas, tenda neporâva.
Ndoroipotái oñehundi upe bomba-H hasyeterei upéva jereko.
Peteî mba'énte ore ndoroipotái oñehundi.
Añeha'â amohu'â haĝua che rembiapo ambue arapokôindýpe.
Che mebykuéra añetehápe hovatavy.
Ahenói upe papapýpe aĝuahêvo hógape.
Ivevuive ambue iñangirû hûgui.
Rehópa museo-pe Europa rupi?
Ipkypy'y omendáva.
Oimeháicha, upe kuimba'e oike.
Ndajarekói mba'eve iñongatupy, upéicha rupi rotanteareinte.
Oikuaa hikuái umi mitâ tuichavévagui, katu che ñemoñarê ombogue.
He’i ojejogua haĝua peteî aspiradora.
Ko'áĝa ahechávo, kóva ko tenda avei chepy'ara'â.
Buffalo ijekipo porâve.
Ohupyty 2000$ rejoguava'erâ.
Ipohýiva rehepyme'êva rehe hepyeterei.
Upe kuatia rogué niko papapy rysýinte.
Héê, 4º-pe rovy'aiterei.
Umíva tenodeguaite chemandu'áva.
mmm…, che jarýi ha che taichachu niko ikunu'ûrasa hikuái ha sapy'apy'a che ru ha che sy umíva oîjepi ha rohasa porâiterei rasa amo yvy gotyo.
Neremoîriva'erâ upe ipyikue reikuaa haĝua mba'e repy.
Chéniko, sargento, tendota, mbo'ehára, namba'apovéimava, he'iháicha Rick
Ha'e he'i ndoikuaaieteha.
Ndorekói iñakâme ojapóvo umíva.
He'i chéve ikatuha amoĝuahê ikatu vove.
Ambyasy ndachera'yiha.
Rova peteî oga pyahúpe.
Iñarandurasa, katu ndocha'éi umi oñemoarandura'âva rehe.
Kennedy ndoikuaai chupekuéra.
Reime en peligro.
Oî oñembyatýmiva ha omopotî tape.
Nde ára ndahetavéi mbohapy áragui.
Naporandúiva moôpa ohóta hikuái.
Ndaháiva Las Vegas-pe.
Emoî marandu reikuave'êhápe yvarykue
Che ha'e chepype, Ñandejára!!! Ha Ramona oî upépe.
Ndahcha'éi mbo'ehao rehe.
Itúva niko presokue araka'eve oho'ÿva tupâópe.
Ha'éma chupekuéra amoneîha.
He'i chéve ndaikuaaiha mba'éichapa ojeiko añeteva'erâ ha ahapykuehova'eraha chupe.
Upe DOT ojogua upe yvy ha mba'e.
DOT ojogua upe yvy 3 millones $ ári rehe.
Ha'e ome'ê chéve mokôi tembiaporâ ha ché apyta upe hakâ sa'íva rehe.
Nameméi tapichakuéra ojehecha upéicha.
Nembareteminteva'erâ reitira haĝua upe mboka atómica sâ.
Tropa niko oreko ipohýiva ohepyme'êva rehe.
Ndaikatúi oñemoî peteî ñe'ême he'i haĝua mávapa omba'apóta mandyjutýpe ha mávapa umi omopotîva'erâ yvy atâ.
Hetave tapicha ohasa tetâ rembe'ÿ ojogua haĝua jey'urâ ndahepyivéva.
Rohecha marandu téle-pe.
Rohómi rovy'a che ru rógape.
Joe añoite oreko upe koty pytu’uha okenda. .
Ndépa reimo'â jehavira porâneha mondaha ojejukáramo?
Aguapy upepe mokôi aravo aja.
Upe mitâkuña chepytyvôtava oî águi 5km hápe.
Upe kuimba'e oñani ambue henda gotyo.
Katue oiméne reguerohoy reho Europa rupi.
Che ryvy araka'eve noñembosako'íri.
Upéi ombojere che rueda, ndaikuaái amalisia upe ara pukukue.
Nañe'êhetamo'âi, jepe heta mba'e ja'ekuaa,
Isái oveve yvytu ndive.
Ima'ê rehe oikévo upe okê rupi aikuaa ndaha'éihague oha'arôva.
Ñangarekoha mokôi aragua, ohenói hikuái tuja ha ĝuaiĝui ñeñangarekoha, katu ha'e oho upe otyarômava rendápe.
Ajapose aerobic, tekotevê aku'e che korasô aipytyvô haĝua.
Tuichaiterei mba'éta ojapóramo upe ojaposéva.
Ha'e araka'eve ndojapói mba'eve ijehegui.
Iporâ ore ñemongeta.
Ambue hemiarirô rehe opena ambue.
Puréte! Isái veve ivytu rupi.
Nde ao iporâiterei.
Ha'e chupe iporâitereiha chéve upe purahéi pyahu.
Ndahesakâi chéve moôpa rehose.
Ooo, opáichavo, che membykuéra 21 ha 24 ary orekóva, ndaikatúi….
Aikuaa mba'épa oikóta ha'e ojaporamoguare upéva.
Peteî voko'i 6 liméta orekóva 30 centavo sa'ive rehepyme'êta upe tetâ mboypýri.
Ohepyme'ê peteî óga rehe.
Katuete rejoguatavo remoîmava'erâ hi'arigua 10% ipohýiva.
Aha tetâ tavusúpe.
Nda'areguasúi, poteî jasy rupi, orekókuri 6 tapicha jurado ramo. Aimo'âkuri akói 12 oîhague ha ja'ekuaa joheipyre.
Ndontendéi mba'eve upe ñemenda oikóvagui, ndoikuaái ni omendahague, añete.
Ore ndoroipe'ái ojuehegui ha romoingepa peteî vosápente.
Oñe'ê peteî iPhone rupive.
Araka'eve ndoroikemo'âi.
Opáichavo, oñantoha chupekuéra kóva ojapo ko O2 regulador yvate.
Upe tornillo ikatu ombokua oimeraêva vevýi.
Upe tapicha ousapy'a kurive.
Fuerzas aéreas-gua chemondo Del Rio, TX-pe 2001-pe.
Ndaikuaaporâi moôpa oho hikuái.
Ikypy'y nomendái.
He'i: Rohepyme'êta ndéve repyta haĝua.
Upe heko peteîcha naiñambuéi.
Rejoko mboy ytýpa upe apañuâi guasuve upe ipohyikuégui.
Mba'épa peje toha'arô hikuái okápe po aravo'i oñeme'ê meve chupekuéra ikuatiarâ?
Che kypy'y he'i mba'evépe ndajoguaiha che jarýipe.
ndaikuaáikuri imba'asypo'ihague.
Ha'e imbarete añe che ahendu haĝuáicha.
Oñongatu umi kuatia pohânohára ha pysyryhára rehegua oñondive.
Chemandu'a porâiterei opa mba'e oikova'ekue angepyhare rehe.
Roikova'ekue upépe are.
Ikatúpa eremi chéve mba'éichapa rejapóne aerobic?
Che sy, omba’apova’ekue okape.
HA'e nde'íri iñe'ênte avaleha upe so'o mbutukáre.
Amo ipahápe che sy ndaha’éikuri ojehayhupáva iñepyrûrâ, péicha oñemondo chupe omba’apo haĝua ñúre, katu ambue mitânguéra nomba’apói hikuái ñúre.
Ajapóta aiporúvo umi total.
Héê, rohendu.
Hi'â ojapo upe ojaposéva.
Oî 30, 40 aviô U2, ha roñepyrû rombokatupyry upi pilóto chino, británico hendivekuéra opa umi ojoajúva orerehépe.
Mokôi karia'y chembokatupyry amba'apo haĝua upe ñemuhápe.
Oiméne ndaha'éi tapicha iñarandupavéva ko yvórape, katu, ehendumi, horyrasa, ha upéva, …oñatende umi tapicha oñemoaranduséva rehe.
Rohópiko museo europeo-pe?
Héê, upe mitâ oî ápe.
Che taitachu hovatavyva'ekue.
He'iramoguare chupe ojupi haĝua ogaguýpe, hesay.
Umi Islas Bermidas-pegua kapi'ipe ikatu ojogua umi golf okarusúpe hovykuépe.
Ha'e ovy'aiterei.
Ndohepyme'êmo'âi mba'evete orerehe.
Upe tornillo oikéta ijahy'o rupi ha ikatu ombyai ivevýi.
Opavavéva oñemoî peteî ñe'ême opavavéva omba'apotaha okaháre.
Chéverô ĝuarâ tapichakuéra ojopyva'erâ ijyty, mmm, ha mmm, ha… ikatu iporâve oñemomichî tuichakuépe, upépe oî upe apañuâi guasuve, ndaha'éi ipohyikuépe.
pyharekue ake mitâicha.
Ko árape ojerure cheve ajapo haĝua tembiapo che katupyrývape.
He'i chéve mba'eve ndoikoiha che aréramo ajapo haĝua.
Ha upéicha he'i Bueno: eheka kóva, péva, amóva, kóva, upéva upe empresa-pe.
tekotevê hetaikte oñembokatupyry omboveve mboyve upe U2
Araha upe vosa hendápe.
Néi, erékuri ndera'yha, mboýpa?
Upe aty militar oñembohéra Texas rerapegua upe EEUU Amandaje Guasúpe.
Ha Androw Gromikov nombohovái mba'eve, katu rorekopa marandu umi ta'ângamýi ojapóva U2.
upéichaite, ha'eséko che ko'â léi pyahukuéra rehe hasy ko'áĝa.
Che tio ipojeraiterei.
Chemyangekói ojaho'ipáramoguare che sapatu.
Ha'e imba'asypo'i ha che ndaikuaáikuri avei upéva.
Oñeha'arô onase jasypakôi 2010-pe
Umíva niko mba'yru ikangýva.
Che ruvicha ovy’aiterei térâ itavyrai.
Upe tornillo michî ha overa.
10000 tapicha omano upe Cuba apañuâime.
Amombe'use ndéve aikuaamíva guive hesegua.
Araka'eve nde'íri chéve aikuaataha mávape.
Néi, itujaiterei, ikatu porâ itúva.
Oooo, mba'épa ovale yvypóra rekove, ikatúnepa terâpa ndaikatúi jagueroikove peteî tapicha.
Okê oîhaguéicha ojepe'â.
Iporâva okaháre niko nderejepy'apýi rejapova'erâ rehe tavaháre.
Mbohapy jasy ipuku upe ñembokatupyry reiporukuaa haĝua upe ao de presión.
Ndajarekói oñemúva hérava Cutty.
Chéniko upe…Aikuaa moô mevépa reĝuahê.
Péva ha’e, eikuaáma, emaña, neapañuâima.
Ha'e oguata iloitére ha upeichavérô oñemosê.
ha heta umíva umi mba'e oik isy ndaikatúi rupi oiko droga'ÿre.
Upe mokôiha orekóva, peteîva umi jaguara'y ijaveguáva, ha pe mácho oiporúva hâi vaíkuri.
Aiko peteî óga sa'yju Missouri-pe.
Roikova'ekue Mallard Creek 85-pe, ko’áĝa upéva 485, rova rupi upépe.
Ojapo hogarâ Mallord Creek-pe.
Ndaijyvytúi, upéicha rupi isái opytaite.
Upéicha jahecha ijeguaka porâiterei.
Aikuaa porâiterei mba'érepa.
Añeha’âmbaite chepu'aka haĝua upépe.
Ha upéicharamo kóva ndaha'éi nde jagua ypykue.
Aikuaa rehayhurasaha umi aranduka remoñe'êva'ekue
Oguejýnte yvýpe, che sapatu ipotî asy.
Sapy'aitemi, remombe'uséramo, che aháta.
Che peteî 922.
Nañe'êvéi hendive.
kóva mbykyve, upe ha'e ome'êva'ekue chéve ombyesa'ipave ha ijetu'uve, ko mokôiha hesakâve.
Nachemandu’ái ahendoramoguare oñeñe'ê Will Point rehe.
Ndaikuaái mba'éichapa ajapóta upe tembiapo oñeme'êva chéve ko árape.
He'i chéve aha haĝua DC-pe.
Fannie Flono oî ápe ha oñe'êta ñandéve imitâramoguare ohasáva okakuaakuévo Augusta, GA-pe.
Hesakâ porâ chéve.
Peteî kuimba'e oipytyvô fisiológico.
Ha'e oiméne onase.
Ikatúkuri rombokatupyry reiporukuaa haĝua upe ao de presión ka'arueterâ.
Upe kuimba'e oike kotýpe.
Ojejapo cobre añetégui.
He'i oguejyhague yvy gotyo.
Peteîha oiko upéva 75 ro'y pukuépe, upe Texa Amandaje oiporavo peteî aty militar, upéramo Texas rerapegua ha upéva rehe oñekotevê Texas rerapegua.
Roñembokatupyry heta ambue ñorairôhára ndive.
Nde! Arekorôguare peteî Cocker Sapniel, upéva niko jagua oikóva okáre ha ahayhuveva'ekue! Nde!!
Ojeheja remboveve U2 upe ára peteîhápente.
Ko árape ndahái, upéicha rupi ndahechái chupe.
Tekotevê amoneî peteîteî umi ñe'ême'ê.
Che jarýi noñe'êséi hembiasa imitâramoguare rehe.
Kennedy oñe'ê umi Fuerzas Armadas-pegua pilotokuéra ndive.
Upe pintura omoambue isa'y jaikuaa haĝua mba'éichapa haku ñaha'â'ÿre..
Ramona oñembo'y che chejuruja apytávo upépe.
Upe kuimba'e iñapysê ojapo mokôi aravo'i.
Che ikatu ôi ajapokuaáva.
Añetehápe ndoro'éi orerehe médiko ñanaha.
Néi, nachemandu'ái, ha'ete ku upéichava, ikatu porânte ndaupéichai, ha'e che, ha'e che.
Roikova'ekue upépe upe óga hovykýpe
Aha DC-pe ahechávo che sâmbyhyhára-pe
He'i opytahague tapére.
Ha'e he'ichéve cheraĝe haĝua.
Ha'e akói omokyre'ỹ ikypy'ýpe.
Héê, vaicha chéve, ndoikomo'âi, katu ñaha'arô toiko.
Chéniko upe…Aikuaa moô mevépa reĝuahê.
Néi, upehague ko'ême, Mburuvichavete Kennedy omboty Cubape ha ore ygarusukuéra ojoko peteî yga ruso oikóva upe Cuba rembe'y gotyo ha ojuhu hukuái mboka guasu.
Upéicha aha Washingtong DC-pe ha ndahái he'ihaguetépe chéve hikuái.
Ojapo hikuái tembiapo mborayhupópe, upera rehe iporâ upe oficial reko
Ndoroikuaái moôpa oho hikuái.
Aha che kypy'y rógape oikóva pépe. Iména omba'apohína Upe Inteligencia ndive ha che aha hógape.
Ha rovajey, rombaysýramojepe.
Hemimo'â iñambue ndoikaái ruipi upe ojapóva.
Añetehápe arahaku oĝuahêmbaitéma.
Amoîkuri inyector upe araapy.
Oiméne upéva upe mba'e chemitâramoguare chemandu'áva, ko'ýte umi mba'e vai ajapo jave.
He'i chéve cherenotaha aikuaa haĝua mávape.
mmm, roreko ipohýiva ao repýre.
Upe aviô oreko voi hesegua okái rire oipyteva'erâ upe tata rendy.
Ha'ete peteî ñongatuha hopea hetáva. Reikuaáma. Peteîteî umi hopea ryepýpe orereko ha'ete peteî kuatia rogue ojekalkulaha iñambuéva ojuehegui.
Chéniko, ndaikuaái mba'éichaitépa oipota oñembyesa'i.
Hêe, añetehápe hory, okýra'e.
Upéicharamo, ndarekói tembiasa.
Ha ko'áĝa areko che reindy peteî Alemania-pe.
Che jarýi omombe'úmi chéve heta hembiasa imitârôguare ha oñe'êvéjepi hogaygua rehe ha mba'éichapa ojeiko upéramo.
Hovaja ipiresa'i.
Oñetanteákuri umi cámara yvategua michîhápe.
Nde ára ojupive ary ohasakuévo.
Upe kuimba'e oike Tribuna koty guasúpe.
Onase jasypakôi 1880 ramo.
Ahecha kuñakarai Faulk-pe sapy’apy’a, katu ndaikuaporâi chupe.
Aiko namombyryiete upe campus-gui.
Añetehápe ndoikói hikuái Augusta-pe, oiko hikuái… néi, nde reikuaa, Augusta, táva michîva upérô, jepe heta oikóva tavaguasúpe ĝuarâ, Augusta ndatuichái.
Rohecharoínakuri peteî mba'e télepe.
Upéva ha'ete ku iporârasáva térâkatu ikaiguetereíva.
Maymavéva omoî champang, katu ndaopavavéi ho'upa. Umi hembýva ikaguápe ho'upa mitânguéra. Upéicha rupi ore rojere roikóvo, ro'úvo upe champang.
Ha'e ikatu oñedenfende porâ
Upéicha, upéva iporâva reikóvo ko tetâme, natekotevêi rejepy'apy umi mba'ére.
Ha, Nde! Aimo'âvaicha pyhare ndakeihague.
Chérô ĝuarâ oikóta katuete.
Kóva oî porâ
Ha'e opyta oiko Augusta-pe upe ñembokapu riréjepe.
Ikatúpa, rekirirîmi, anive reñe'ê aerobic rehe.
Chemondýi mba'emab'épa pehpyty.
Nañe'êiva Ramona ndive.
Cheraĝe ha amohu'â pya'e porâ
Kapi'ipe Bermuda hembiapoiterei.
Naiméiva tembiapo jeporavopyrépe.
Ropyta upe ógape ore rekove pukukue.
Nahániri, ha’e oî vaietereíkuri.
Ha oñe'ê porâiterei, oñe'ê pumbyry rupive.
Rehópiko museo-pe Canada rupi?
Ndaijái chéve añomongetapa haĝua opa mba'e rehe.
Oñeha'arôkuri onase.
Amba'apo umi ambue kuatiahai ojapómava rehe.
Che máro ndaha'éi 922.
ha'e ipu'aka jagua ñarô rehe.
Nahendúi ni peteî hembiasakue.
Ha'e nomoambueiete heko.
Upe Estados Unidos Fuerzas Armadas mburuvicha oñepyrûramoite hembiapo ko arakopôindýpe.
Ko'áĝa ni ndavy’ái oîhaguére upépe, cheakârasyeterei rupi.
Añetehápe, ndaikuaái, ndarahái gueteri heta ao porâ, upéva añete.
Cheporavo aha haĝua mbo'ehaópe.
Tapichakuéra oikuaa ha'ekuéra ouha Afrikaygua ruguýgui.
Añemoarandu aikovohínakuri are.
Ái, Che ndaikói upe tenda rokápe.
Ha'e he'i ani rejepy'apy, nde reikuaa, ko'â mba'e ipukukuaaha.
Ndaikatúi ahendu ichupe.
Ndaikuaaporâi moôitépa kóva.
Ndépa reimo'â oîtaha tapicha oimo'âva iporâha oha'arô po ára ojejoko aja?
Pe kuñataî ikatúva chepytyvô oî amo táva mboypýri.
Ivaiete ko kuarahy resape tapia.
Ipu kyre'ÿeterei, héê, mboy mba'épiko oheja hikuái ojejapo.
Ahai tembiapo he'íva guive.
Ha aha hógape ha ahenói upe papapy oje'evakue ahenói haĝua aĝuahê vove upépe.
Ha'e noñe'êi chendive.
Roju rire roikohágui rojuhu peteî jaguane ore róga sapy'aguápe.
Ha'e ndaijaguara'ýi.
Upéicharô, apensa añe'âjeyva'erâ Ramona ndive.
Ndaikuaaporâi mboýpa ha'e oipota hupy.
Upe Base Aérea Laughlin noñembotýi araka'eve.
oooo, kóvaniko,... Fresno.
Mitânguéra ho'u mbohapy liméta champang.
Areko che kypy'y oikóva ko'aĝaite Cuba-pe.
Aikuaákuri imba'asypo'ihague.
Avyra'e aimo'âvo akói jurado-pe oîha 12 tapicha.
Golly, reikuaápa ha'e ndoguatái tekorâ he'iháicha ha chéve ha'ete ku nachemyangekóiva upéva, ha katuete, omosê hikuái chupe jaguáicha.
Pe cableado ndaha’éi apañuâi.
Ha’e itujaitereíma, ikatu che ru.
Hasyeterei chéve, ndachepu'akavéima.
Apensamiva'erâ. Néi, aha, ahejáta toho amuéva, katu upéi apensáta. Chedio!!
Brian, Plano, Texas-pe, Mba'éichapa reime ko árape?
Nahániri, añetehápe ndaikuaái chupe. Ndaikuaáichéne.
Locust Hill, héê, ikatupyryvéva.
Oîramo mba'e ikatúva ojejapo.
Che taichachu upe karai horyvéva rejuhútava nderekovépe.
Che jarýi omombe'u chéve heta mba'e hogaygua rehe ha'e michîmiramoguare.
Ha upéramo, rova Las Vegas-pe NY ha amombe'u, upéicha ajapohaguéicha Washington-pe, peteî óga renda Las Vegas centro-pe.
Fannie Flono omohendajey hembiapokuéra ha ndaikatumo'âi omombe'u ñandéve mba'eve ko árape.
Ejesareko porâve haĝua mboka rehe reiporuva'erâ mokôive nde py.
Chekerajopy gueteri pyharekue ha ndaikatúi ake.
Opavavépe ome'ê oréve peteî papapy meme, jepe he'íkuri oréve oîtaha iprivilegivétava'ekue, japupantevoira'e.
Chéverô ĝuarâ, iporâvéva upe ka'aguýpe jaha jajehoga'aposapy'ami.
Aikuaa porâiterei upe aikotevêva niko umi total ha ajapótama kóva.
He’i ikatuha ohupyty oipota vove.
Ndahechavái peichagua apañuâi cableado rehegua.
Umi sykuéra niko drogadicta.
Nomombytái ni peteî yga guasu ani haĝua iñapañuâi hikuái.
He’i ojejuhu haĝua peteî mopotîha.
Fuerzas Aéreas ojogua aviôkuéra.
Mmm, upe rire rova ore roga pyahúpe.
Ha'ekuéra ojapo peteî regulador pyahu.
Araka'eve noĝuahêi ni peteî aviô.
Ejército chemondo DC-pe upepete.
Ore róga oî águi mokôi manzana.
Upéva añetehápe nda'upéichai, ooo naimbaretéi.
Iñemoñarekuéra oikovepa.
Heta tembiasa oreko táva ñamboívo.
Oheja hikuái oho hetave mokôijeýgui pe arapokôi ryepýpe umi tapicha otyarômava ikatúma guive.
Peteîjey roho upépe, upépe, rojujeývo upe jehechaukahágui romyandy hesakâ haĝua ore róga sapy'agua jere ha oî peteî jaguane.
Haimete ahejarei.
Upe mitâ omanova'ekue onasemavoi hasykatu.
Aimo'â ohejáta ambuévape oike che rendaguépe upe atyhápe.
Rehugava'erâ upe regulador rehe.
Ore roreko illavekuéra.
Ndaikuaaporâi, katu, oimeva'erâ upéicha.
Héê, tapicha oîva'erâ hembiapohápe oimeha aravo térâ he'íva hikuái ikatuva'erâ ombotyai oime rire ha'é he'íta oikova'erâ.
Aguatave ha ahupi imba'yru ha aha aha haĝuáme.
Hetaiterei mba'e ikatu ja'e kóva rehe, upéicharamo ahasánte che kóva.
Rohecharoínakuri téle.
Upépe reho porâ, Reikuaápa mba'épa opensa nde ao rehe ha che?
Oikuaaseterei mboýpa ikatu ho'u.
Cheraha heta amboguata haĝua che jarýi ha che taitachu róga peve.
Hi'â chéve ko'â arahaku repytu'ûtava terehasa vaiete.
Ambue hemiarirô rehe opena ambue hûhaguére.
Natekotevêi rejapopa.
Amba'apo'aína hese.
Ojejokova'erâ po ára aja umi tapicha ojoguaséva imbokarâgui.
Ndahepyiete ñañemonde.
Oî ambue tapica oimo'âva oficial reko iporârasaha.
Nohenói upe guive.
Hembireko ojasegura imenakue oñemboty haĝua omano meve.
Añemonde porâse che.
Ndajepy'apýi ahai haĝua.
Ha'e nonaséi 1984 peve.
Ndoroikuaái moôpa oho upe aty heta tetâmegua.
Cheporavo hikuái 15 tapicha apytépe aha haĝua mbo'ehaópe ha ndahamo'âi, ndahamo'âi
Anetehápe upéicha, katu temimoîmby pypegua are rie oñemoañete.
Ha'e onase oñepyrûvo siglo.
Cha añoite sapy'apy'a omomba'apóva umi reguladores ojeporúva oñetantea haĝua cámara yvategua michîhápe.
Ndahasyiete rehechakuaa haĝua upéva.
Ndaikuaái opytápara'e Augusta-pe upe rire.
Ndohasái cheakâ rupi ahejareívo.
Aikuaa ndaiporiha mba'eve ikatúva che ajapo.
Umi sy niko ndo'úi oje'éva chupekuéra ni pohâ
HA'e Wills Point, ndaikuaái reikuaápa.
Ndaipóri avave ikatúva chepytyvô.
Aimo'â ouha oñorairô haĝua.
Ore ao peteîcha umi astronauta oiporuvaichagua, ojoavy michîmi oremba'e overa ombojevypotávo pytu aku.
Upe pintura omoambue isa'y.
Amano vare'águi.
Hasyvéta chéve araha haĝua upépe che memby.
Néi, upéva iporâ, napensáikuri hese ikatuha.
Hetave otanteáva ndohasái upe aranduchauka ha márônte nombovevéi U2
Ikatu ojeporavo peipotaháicha jurado-râ.
Upe y rembe'y iporâ, ha iporâ jaha haĝua jahechami, upéva rehe oiméne upe tenda ahayhu rasa. Ha nde?
Amoîngepa kavaletépe.
Ahe'â'anía ajapo.
Upéva upe idea niko amboykémakuri ambue arapokôime.
Che upe iporavopyrâ ojejeroviaveha.
Aikuaa tembiapo ojejapova'erâha upe javete.
Oñeha'arôkuri ahenói, katu nahenói.
Ha'u upe pizza mokôi aravo'ípe.
Ajepy'apy ahava'erâgui mitânguéra ñehekombo'ehápe.
Ombovyvy mbeguekatu asy.
Mba'eichagua jagua ta'yrusúpa rereko?
Rojuhu kavara ore róga sapy'aguápe rombogue rire lu.
Ha'e opyta oiko Augusta-pe.
Ipire hekasâ ja'e haĝua hese Afrikaygua ruguyha.
Roikeramo gaure upe okê oñemboty.
Sapy'ánte nde'íri chéve.
Mba'evete chéve mba'e sa'ýpa nde reiporavo.
Héê, Terehasa porâite ko'â arahaku.
Héê, ikatu ko'â tapicha nda'ivare'ái.
Ha’e he'i isy oguataha ha'eichaite.
Mba'evete chéve mba'épa ikatu ohepyme'ê.
Roipyso ore mbaretekue 1968-pe.
Ajeíma upe oje'évagui, aipo peteî kuimba'e oikutihague hembirekópe ojuka peve ha'e oke rupi ambue kuimba'e ndive, hembirekokue ha'eséko, nde reikuaa mba'érepa añe'ê.
Aimékuri Missouri-pe.
Añetehápe añeha'â ajapo ikatumíva.
Rome'êmbaite ore rymba rovávo Concord-pe.
Vaicha chéve ahendu ichupe.
Ahayhuve jagua ikaiguéva ikotyvy'áva, ani peteîva ikyre'ÿeteríva oîséva okape ara pukukue.
Oî tapicha ohayhúva upe guyryry ojapóva.
Rejogua jave peteî mba'e, ko'ýte heta jave, rehepyme'ê ha katuete ojoapy hese ipyhýiva hi'arigua 10%
Ikypy'y omenda kuimba'e ipirehûva rehe.
Ooo, upégui ou eréva.
Añeha'â ahaipaite.
Peteîva umi 5 apytépe omano.
Amba'apo mba'e pyahuete rehe.
Upe paradoja eréva oî porâiterei.
Aikuaa nacherenduseiha
HA'e oikuaaseve mba'éichapa ogana viru umi cooperativa de ahorro y crédito.
Ndoikuaaséi mba'evete.
Ha’e itujave chehegui.
Ahecharamo ohejaha ndéve reike hi'upy ha ñemboy'urâ reheve.
Umi kavara oñeñongatu porâ
Oiko ha oiko'ÿme jeguaroikove niko ñande rekove iporâ.
Ha'e imitâitereive chugui.
Upe mácho hâi vai, ha upe jaguara'y ojuhuva'ekue ytýpe.
Peteî tapicha añoite omano upe Cuba apañuâime accidente-pe.
Upe pilóto oñemboguéma bomba.
Asêva'ekue 2002-pe
Ndacha'éi upe tembiapo ñemyakâ rehegua.
Ha'e oñe'ê mbohapy mba'e rehe.
